choose section start

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/d5c99b5a88.js" crossorigin="anonymous"></script>
     <!-- daisyui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- coustom css -->
     <script>
@@ -606,7 +606,7 @@
             </div>
             <div class="">
               <div class="">
-                <!-- <img src="./images/like 1.svg" alt=""> -->
+                <img src="./images/group-1.png" alt="">
               </div>
               <div class="">
                 <h4>Gift Certificates</h4>
