--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </head>
 <body class="font-lato">
     <header class="container mx-auto ">
-        <nav class="py-4 mx-4 lg:mx-0">
-            <div class="flex items-center justify-between bg-[#F85559] px-7 py-5 rounded-full">
+        <nav class="lg:py-4 py-2 mx-4 lg:mx-0">
+            <div class="flex items-center justify-between md:bg-[#F85559] px-7 py-5 rounded-full">
                 
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1 text-prymary-color">
@@ -80,7 +80,7 @@
             </div>
         </nav>
         <!-- slider banner -->
-        <div class="pt-8">
+        <div class="md:pt-8">
           <div class="carousel w-full relative">
             <div id="slide1" class="carousel-item relative w-full
               bg-[url('./images/banner1.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
@@ -464,7 +464,7 @@
             <div class="h-full w-full  bg-black  top-0 bg-opacity-60 rounded-lg absolute"></div>
             <div class="hero-content text-center pt-24 pb-7">
               <div class="z-10">
-                <h2 class="mb-5 text-xl md:text-5xl font-extrabold text-white z-20">Meet the team section</h2>
+                <h2 class="mb-5 text-2xl md:text-5xl font-extrabold text-white z-20">Meet the team section</h2>
                 <p class="mb-5 md:w-[615px] text-white z-20 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 <!-- meet carrt -->
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pt-4">
@@ -578,57 +578,105 @@
       <!-- chooce section -->
       <section class="py-24">
         <div class="text-center space-y-3">
-          <h2 class="font-extrabold text-5xl">Why Choose Us</h2>
-          <p class="text-base font-medium ">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+          <h2 class="font-extrabold md:text-5xl text-2xl">Why Choose Us</h2>
+          <p class="text-base font-medium leading-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
-        <div class="">
+        <div class="grid lg:grid-cols-3 grid-cols-1 gap-5 pt-10">
           <!-- choose left -->
-          <div class="">
-            <div class="">
-              <div class="">
-                <!-- <img class="bg-black opacity-90 rounded-full p-[18px] " src="./images/group-1.svg" alt=""> -->
+          <div class="grid gap-3 justify-center">
+            <div class="lg:flex gap-4">
+              <div class="grid justify-center">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px] " src="./images/group-1.png" alt="">
               </div>
-              <div class="">
-                <h4>Dedicated Team</h4>
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center">
+                <h4 class="text-2xl font-extrabold">Dedicated Team</h4>
                 <hr>
-                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="text-base font-medium	">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
-            <div class="">
-              <div class="">
-                <!-- <img src="./images/love-1.svg" alt=""> -->
+            <div class="lg:flex gap-4">
+              <div class="grid justify-center">
+                <img class=" bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/love-1.png" alt="">
               </div>
-              <div class="">
-                <h4>Fresh is Best</h4>
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center">
+                <h4 class="text-2xl font-extrabold">Fresh is Best</h4>
                 <hr>
-                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
-            <div class="">
-              <div class="">
-                <img src="./images/group-1.png" alt="">
+            <div class="lg:flex   gap-4">
+              <div class="grid justify-center">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/gift-box-1.png" alt="">
               </div>
-              <div class="">
-                <h4>Gift Certificates</h4>
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center">
+                <h4 class="text-2xl font-extrabold">Gift Certificates</h4>
                 <hr>
-                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
           </div>
           <!-- choose mid -->
-          <div class="">
-            <img src="./images/whychoose1.png" alt="">
+          <div class="order-first lg:order-none">
+            <img class="w-full" src="./images/whychoose1.png" alt="">
           </div>
           <!-- choose right -->
-          <div class="">
-
+          <div class="grid gap-3 justify-center lg:justify-end">
+            <div class=" flex flex-col-reverse lg:flex-row gap-4">
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] lg:text-right text-center">
+                <h4 class="text-2xl font-extrabold">Integrated Supplier</h4>
+                <hr>
+                <p class="text-base font-medium	">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+              <div class="grid justify-center ">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/group-1.png" alt="">
+              </div>
+            </div>
+            <div class="flex flex-col-reverse lg:flex-row gap-4">
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] lg:text-right text-center">
+                <h4 class="text-2xl font-extrabold">Sustainable Practice</h4>
+                <hr>
+                <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+              <div class="grid justify-center">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/love-1.png" alt="">
+              </div>
+            </div>
+            <div class="flex flex-col-reverse lg:flex-row gap-4">
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] lg:text-right text-center">
+                <h4 class="text-2xl font-extrabold">The Benefits Only</h4>
+                <hr>
+                <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+              <div class="grid justify-center">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/gift-box-1.png" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
     </main>
-    <footer>
-
+    <footer class="footer footer-center p-10 bg-[#121212] text-base-content rounded">
+      <div class="">
+        <div class="">
+          <a class="flex items-center gap-4 normal-case text-xl"><img src="./images/logo.png" alt=""><h3 class="text-2xl md:text-4xl font-bold text-prymary-color">Fruit Burst</h3></a>
+      </div>
+      </div>
+      <div class="grid md:grid-cols-6 grid-cols-3 gap-4 justify-center text-white">
+        <a class="link link-hover">Home</a> 
+        <a class="link link-hover">About Us</a> 
+        <a class="link link-hover">Shop</a> 
+        <a class="link link-hover">All Fruits</a>
+        <a class="link link-hover">Support</a>
+        <a class="link link-hover">My Account</a>
+      </div> 
+      <div>
+        <div class="grid grid-flow-col gap-4">
+          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current text-white"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a> 
+          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current text-white"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a> 
+          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current text-white"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+        </div>
+      </div> 
     </footer>
 </body>
 </html>
