--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full
-                bg-[url('./images/banner1.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
+                bg-[url('./images/banner2.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
                 <div class="h-full w-full  bg-gradient-to-t from-[#12121200] to-[#121212]  top-0 bg-opacity-60 rounded-lg absolute"></div>
                 <!-- bg-gradient-to from-[#121212 ] to-[#121212] -->
                 <div class="hero z-10">
@@ -119,7 +119,7 @@
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full
-                bg-[url('./images/banner1.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
+                bg-[url('./images/banner3.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
                 <div class="h-full w-full  bg-gradient-to-t from-[#12121200] to-[#121212]  top-0 bg-opacity-60 rounded-lg absolute"></div>
                 <!-- bg-gradient-to from-[#121212 ] to-[#121212] -->
                 <div class="hero z-10">
@@ -137,7 +137,7 @@
                   </div>
                 </div> 
                 <div id="slide4" class="carousel-item relative w-full
-                bg-[url('./images/banner1.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
+                bg-[url('./images/banner4.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
                 <div class="h-full w-full  bg-gradient-to-t from-[#12121200] to-[#121212]  top-0 bg-opacity-60 rounded-lg absolute"></div>
                 <!-- bg-gradient-to from-[#121212 ] to-[#121212] -->
                 <div class="hero z-10">
@@ -628,7 +628,7 @@
                 <p class="text-base font-medium	">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
               <div class="grid justify-center ">
-                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/group-1.png" alt="">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/fruit-1.png" alt="">
               </div>
             </div>
             <div class="flex flex-col-reverse lg:flex-row gap-4">
@@ -638,7 +638,7 @@
                 <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
               <div class="grid justify-center">
-                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/love-1.png" alt="">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/ice-cream-1.png" alt="">
               </div>
             </div>
             <div class="flex flex-col-reverse lg:flex-row gap-4">
@@ -648,7 +648,7 @@
                 <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
               <div class="grid justify-center">
-                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/gift-box-1.png" alt="">
+                <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/like-1.png" alt="">
               </div>
             </div>
           </div>
