--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </nav>
         <!-- slider banner -->
-        <div class="md:pt-8">
+        <div class="md:pt-8 px-3 md-5">
           <div class="carousel w-full relative">
             <div id="slide1" class="carousel-item relative w-full
               bg-[url('./images/banner1.png')] h-[200px] md:h-auto bg-no-repeat bg-cover bg-center pt-8  md:pt-14 lg:pt-20 pb-10 md:pb-20 lg:pb-48 rounded-lg">
@@ -163,19 +163,19 @@
                 <div class="flex justify-center">
                   <div class="">
                     <img src="./images/fruit1.png" alt="">
-                    <p>Strawberry</p>
+                    <p>Red Grapes</p>
                   </div>
                 </div>
                 <div class="flex justify-center">
                   <div class="">
                     <img src="./images/fruit2.png" alt="">
-                    <p>Strawberry</p>
+                    <p>Orange</p>
                   </div>
                 </div>
                 <div class="flex justify-center">
                   <div class="">
                     <img src="./images/fruit3.png" alt="">
-                    <p>Strawberry</p>
+                    <p>Mango</p>
                   </div>
                 </div>
                 <div class="flex justify-center">
@@ -187,7 +187,7 @@
                 <div class="flex justify-center">
                   <div class="">
                     <img src="./images/fruit5.png" alt="">
-                    <p>Strawberry</p>
+                    <p>Pomegranate</p>
                   </div>
                 </div>
               </div>
@@ -196,12 +196,12 @@
         </div>
     </header>
 
-    <main class="container mx-auto">
+    <main class="container mx-auto px-5">
       <!-- Deal of the day section -->
       <section class="lg:pt-40 py-10">
         <div class="flex flex-col lg:flex-row gap-6 justify-between items-center space-y-5 md:space-y-0">
           <div class="space-y-4 text-center lg:text-left">
-            <h2 class="text-2xl md:text-5xl font-extrabold text-[#121212]">Deal of the day</h2>
+            <h2 class="text-2xl md:text-3xl  lg:text-5xl font-extrabold text-[#121212]">Deal of the day</h2>
             <p class="text-base font-medium md:w-[600px]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
           <div class="">
@@ -258,7 +258,7 @@
               </div>
               <div class="">
                 <!-- The button to open modal -->
-                <label for="my_modal_6" class="btn">Details</label>
+                <label for="my_modal_6" class="btn hover:bg-[#F85559] hover:text-white">Details</label>
                   <!-- modal-body -->
               <input type="checkbox" id="my_modal_6" class="modal-toggle" />
               <div class="modal">
@@ -313,7 +313,7 @@
               </div>
               <div class="">
                 <!-- The button to open modal -->
-                <label for="my_modal_7" class="btn">Details</label>
+                <label for="my_modal_7" class="btn hover:bg-[#F85559] hover:text-white">Details</label>
                   <!-- modal-body -->
               <input type="checkbox" id="my_modal_7" class="modal-toggle" />
               <div class="modal">
@@ -368,7 +368,7 @@
               </div>
               <div class="">
                 <!-- The button to open modal -->
-                <label for="my_modal_8" class="btn">Details</label>
+                <label for="my_modal_8" class="btn hover:bg-[#F85559] hover:text-white">Details</label>
                   <!-- modal-body -->
               <input type="checkbox" id="my_modal_8" class="modal-toggle" />
               <div class="modal">
@@ -423,7 +423,7 @@
               </div>
               <div class="">
                 <!-- The button to open modal -->
-                <label for="my_modal_9" class="btn">Details</label>
+                <label for="my_modal_9" class="btn hover:bg-[#F85559] hover:text-white">Details</label>
                   <!-- modal-body -->
               <input type="checkbox" id="my_modal_9" class="modal-toggle" />
               <div class="modal">
@@ -455,16 +455,19 @@
             </div>
           </div>
         </div>
+        <div class="lg:pt-16 lg:pb-32 pt-8 pb-10 text-center" >
+          <button class="py-5 px-7 bg-[#F85559] text-white hover:bg-white font-bold hover:text-[#F85559] rounded-lg border-2 hover:border-[#F85559]">Shop All</button>
+        </div>
       </section>
 
       <!-- Meet the team section -->
       <section>
         <div class="">
-          <div class="hero relative bg-[url('./images/banner1.png')] bg-no-repeat bg-center bg-cover ">
+          <div class="hero relative bg-[url('./images/banner1.png')] bg-no-repeat bg-center bg-cover rounded-xl">
             <div class="h-full w-full  bg-black  top-0 bg-opacity-60 rounded-lg absolute"></div>
             <div class="hero-content text-center pt-24 pb-7">
               <div class="z-10">
-                <h2 class="mb-5 text-2xl md:text-5xl font-extrabold text-white z-20">Meet the team section</h2>
+                <h2 class="mb-5 text-2xl md:text-3xl  lg:text-5xl font-extrabold text-white z-20">Meet the team section</h2>
                 <p class="mb-5 md:w-[615px] text-white z-20 mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 <!-- meet carrt -->
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pt-4">
@@ -497,7 +500,7 @@
                   <div class="card bg-transparent ">
                     <figure><img src="./images/member2.png" alt="Shoes" /></figure>
                     <div class="card-body ">
-                      <h2 class="text-white text-2xl font-bold">Awlad Hossain</h2>
+                      <h2 class="text-white text-2xl font-bold">Safia Chowdhury</h2>
                       <p class="text-white font-medium text-base">Fruits Expert</p>
                       <div class="pt-4">
                         <ul class="flex justify-center gap-4">
@@ -522,7 +525,7 @@
                   <div class="card bg-transparent ">
                     <figure><img src="./images/member3.png" alt="Shoes" /></figure>
                     <div class="card-body ">
-                      <h2 class="text-white text-2xl font-bold">Awlad Hossain</h2>
+                      <h2 class="text-white text-2xl font-bold">Rokib Hossain</h2>
                       <p class="text-white font-medium text-base">Fruits Expert</p>
                       <div class="pt-4">
                         <ul class="flex justify-center gap-4">
@@ -547,7 +550,7 @@
                   <div class="card bg-transparent">
                     <figure><img src="./images/member4.png" alt="Shoes" /></figure>
                     <div class="card-body ">
-                      <h2 class="text-white text-2xl font-bold">Awlad Hossain</h2>
+                      <h2 class="text-white text-2xl font-bold">Chaity</h2>
                       <p class="text-white font-medium text-base">Fruits Expert</p>
                       <div class="pt-4">
                         <ul class="flex justify-center gap-4">
@@ -578,7 +581,7 @@
       <!-- chooce section -->
       <section class="py-24">
         <div class="text-center space-y-3">
-          <h2 class="font-extrabold md:text-5xl text-2xl">Why Choose Us</h2>
+          <h2 class="font-extrabold lg:text-5xl md:text-3xl text-2xl">Why Choose Us</h2>
           <p class="text-base font-medium leading-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
         <div class="grid lg:grid-cols-3 grid-cols-1 gap-5 pt-10">
@@ -588,9 +591,9 @@
               <div class="grid justify-center">
                 <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px] " src="./images/group-1.png" alt="">
               </div>
-              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center">
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center lg:text-left">
                 <h4 class="text-2xl font-extrabold">Dedicated Team</h4>
-                <hr>
+                <div class="w-40 h-[1px] bg-[#121212] mx-auto lg:ml-0"></div>
                 <p class="text-base font-medium	">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
@@ -598,9 +601,9 @@
               <div class="grid justify-center">
                 <img class=" bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/love-1.png" alt="">
               </div>
-              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center">
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center lg:text-left">
                 <h4 class="text-2xl font-extrabold">Fresh is Best</h4>
-                <hr>
+                <div class="w-40 h-[1px] bg-[#121212] mx-auto lg:ml-0"></div>
                 <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
@@ -608,9 +611,9 @@
               <div class="grid justify-center">
                 <img class="bg-black bg-opacity-10 text-[#121212] rounded-full p-[18px]" src="./images/gift-box-1.png" alt="">
               </div>
-              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center">
+              <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] text-center lg:text-left">
                 <h4 class="text-2xl font-extrabold">Gift Certificates</h4>
-                <hr>
+                <div class="w-40 h-[1px] bg-[#121212] mx-auto lg:ml-0"></div>
                 <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
@@ -624,7 +627,7 @@
             <div class=" flex flex-col-reverse lg:flex-row gap-4">
               <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] lg:text-right text-center">
                 <h4 class="text-2xl font-extrabold">Integrated Supplier</h4>
-                <hr>
+                <div class="w-40 h-[1px] bg-[#121212] mx-auto lg:mr-0"></div>
                 <p class="text-base font-medium	">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
               <div class="grid justify-center ">
@@ -634,7 +637,7 @@
             <div class="flex flex-col-reverse lg:flex-row gap-4">
               <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] lg:text-right text-center">
                 <h4 class="text-2xl font-extrabold">Sustainable Practice</h4>
-                <hr>
+                <div class="w-40 h-[1px] bg-[#121212] mx-auto lg:mr-0"></div>
                 <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
               <div class="grid justify-center">
@@ -644,7 +647,8 @@
             <div class="flex flex-col-reverse lg:flex-row gap-4">
               <div class="space-y-3 lg:w-[354px] w-[235px] md:w-[400px] lg:text-right text-center">
                 <h4 class="text-2xl font-extrabold">The Benefits Only</h4>
-                <hr>
+                <div class="w-40 h-[1px] bg-[#121212] mx-auto lg:mr-0"></div>
+                <!-- <hr class="w-40 font-extrabold mx-auto "> -->
                 <p class="text-base font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
               <div class="grid justify-center">
@@ -656,25 +660,29 @@
       </section>
 
     </main>
-    <footer class="footer footer-center p-10 bg-[#121212] text-base-content rounded">
+    <footer class="footer footer-center py-10 md:py-24 bg-[#121212] text-base-content rounded space-y-4 md:space-y-10">
       <div class="">
         <div class="">
           <a class="flex items-center gap-4 normal-case text-xl"><img src="./images/logo.png" alt=""><h3 class="text-2xl md:text-4xl font-bold text-prymary-color">Fruit Burst</h3></a>
       </div>
       </div>
-      <div class="grid md:grid-cols-6 grid-cols-3 gap-4 justify-center text-white">
-        <a class="link link-hover">Home</a> 
-        <a class="link link-hover">About Us</a> 
-        <a class="link link-hover">Shop</a> 
-        <a class="link link-hover">All Fruits</a>
-        <a class="link link-hover">Support</a>
-        <a class="link link-hover">My Account</a>
+      <div class="grid lg:grid-cols-6 grid-cols-4 gap-6 md:gap-12 justify-center text-white">
+        <a class="link no-underline text-lg font-semibold ">Home</a> 
+        <a class="link no-underline text-lg font-semibold">About Us</a> 
+        <a class="link no-underline text-lg font-semibold">Shop</a> 
+        <a class="link no-underline text-lg font-semibold">All Fruits</a>
+        <a class="link no-underline text-lg font-semibold col-span-2 lg:col-span-1">Support</a>
+        <a class="link no-underline text-lg font-semibold col-span-2 lg:col-span-1">My Account</a>
       </div> 
       <div>
-        <div class="grid grid-flow-col gap-4">
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current text-white"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a> 
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current text-white"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a> 
-          <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current text-white"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+        <div class="grid grid-cols-6 md:grid-cols-6 gap-6  md:gap-10 text-white">
+          <a><i class="fa-brands fa-twitter text-[40px]"></i></a> 
+          <a><i class="fa-brands fa-facebook text-[40px]"></i></a> 
+          <a><i class="fa-brands fa-youtube text-[40px]"></i></a> 
+          <a><i class="fa-brands fa-linkedin-in text-[40px]"></i></a> 
+          <a><i class="fa-brands fa-instagram text-[40px]"></i></a> 
+          <a><i class="fa-brands fa-apple text-[40px]"></i></a> 
+         
         </div>
       </div> 
     </footer>
