--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="space-y-3 md:space-y-5">
                       <h1 class="text-2xl md:text-5xl lg:text-7xl  font-extrabold text-prymary-color">Exotic tastes at your <br> doorstep</h1>
                       <p class="text-sm md:text-xl font-normal md:font-medium text-prymary-color">We supply highly quality organic products</p>
-                      <button class="btn bg-[#F85559] text-prymary-color border-[#F85559]">Shop Now</button>
+                      <button class="btn bg-[#F85559] text-prymary-color hover:text-[#F85559] border-[#F85559] hover:border-[#F85559]">Shop Now</button>
                     </div>
                   </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="space-y-3 md:space-y-5">
                       <h1 class="text-2xl md:text-5xl lg:text-7xl  font-extrabold text-prymary-color">Exotic tastes at your <br> doorstep</h1>
                       <p class="text-sm md:text-xl font-normal md:font-medium text-prymary-color">We supply highly quality organic products</p>
-                      <button class="btn bg-[#F85559] text-prymary-color border-[#F85559]">Shop Now</button>
+                      <button class="btn bg-[#F85559] text-prymary-color hover:text-[#F85559] border-[#F85559] hover:border-[#F85559]">Shop Now</button>
                     </div>
                   </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="space-y-3 md:space-y-5">
                       <h1 class="text-2xl md:text-5xl lg:text-7xl  font-extrabold text-prymary-color">Exotic tastes at your <br> doorstep</h1>
                       <p class="text-sm md:text-xl font-normal md:font-medium text-prymary-color">We supply highly quality organic products</p>
-                      <button class="btn bg-[#F85559] text-prymary-color border-[#F85559]">Shop Now</button>
+                      <button class="btn bg-[#F85559] text-prymary-color hover:text-[#F85559] border-[#F85559] hover:border-[#F85559]">Shop Now</button>
                     </div>
                   </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="space-y-3 md:space-y-5">
                       <h1 class="text-2xl md:text-5xl lg:text-7xl  font-extrabold text-prymary-color">Exotic tastes at your <br> doorstep</h1>
                       <p class="text-sm md:text-xl font-normal md:font-medium text-prymary-color">We supply highly quality organic products</p>
-                      <button class="btn bg-[#F85559] text-prymary-color border-[#F85559]">Shop Now</button>
+                      <button class="btn bg-[#F85559] text-prymary-color hover:text-[#F85559] border-[#F85559] hover:border-[#F85559]">Shop Now</button>
                     </div>
                   </div>
                 </div>
