--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </div>
           <!-- bonus -->
           <div class="hidden lg:block">
-            <div class="flex justify-center">
+            <div class="flex justify-center drop-shadow-xl">
               <div class="grid grid-cols-5 justify-between w-[1080px] bg-white rounded-xl -mt-24 py-8  text-center z-99 absolute">
                 <div class="flex justify-center">
                   <div class="">
