--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   </ul>
                 </div>
                 <div class="">
-                    <a class="flex items-center gap-4 normal-case text-xl"><img src="./images/logo.png" alt=""><h3 class="text-2xl md:text-4xl font-bold text-prymary-color">Fruit Burst</h3></a>
+                    <a class="flex items-center gap-4 normal-case text-xl"><img src="./images/logo.png" alt=""><h3 class="text-2xl md:text-4xl font-bold md:text-prymary-color text-black">Fruit Burst</h3></a>
                 </div>
                 <div class="form-control hidden lg:block">
                     <form class="relative">
@@ -676,12 +676,12 @@
       </div> 
       <div>
         <div class="grid grid-cols-6 md:grid-cols-6 gap-6  md:gap-10 text-white">
-          <a><i class="fa-brands fa-twitter text-[40px]"></i></a> 
-          <a><i class="fa-brands fa-facebook text-[40px]"></i></a> 
-          <a><i class="fa-brands fa-youtube text-[40px]"></i></a> 
-          <a><i class="fa-brands fa-linkedin-in text-[40px]"></i></a> 
-          <a><i class="fa-brands fa-instagram text-[40px]"></i></a> 
-          <a><i class="fa-brands fa-apple text-[40px]"></i></a> 
+          <a href=""><i class="fa-brands fa-twitter text-[40px]"></i></a> 
+          <a href=""><i class="fa-brands fa-facebook text-[40px]"></i></a> 
+          <a href=""><i class="fa-brands fa-youtube text-[40px]"></i></a> 
+          <a href=""><i class="fa-brands fa-linkedin-in text-[40px]"></i></a> 
+          <a href=""><i class="fa-brands fa-instagram text-[40px]"></i></a> 
+          <a href=""><i class="fa-brands fa-apple text-[40px]"></i></a> 
          
         </div>
       </div> 
